--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 09. 12. 2021</h5>
+<h5>Pátek, 10. 12. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s pestem</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 9.12.2021</div>
+<div class="nadpis">Pátek 10.12.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Medovník </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Chia puding s kokosovým mlékem, mango - bez lepku a laktózy</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Linecký koláč s višněmi, tvarohem a drobenkou</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka s červenou čočkou samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Tomatová polévka s červenou čočkou s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Bramborový knedlík plněný kachním masem, červené zelí, perníkové puré, pečená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">159 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí soté s dýní hokaido, dušená rýže, jarní cibulka <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Grilovaný lilek zapečený s rajčaty a mozzarellou, vařené brambory, dip že sušených rajčat, bazalka <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicová se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName"> Moravský vrabec, bramborové a houskové knedlíky, špenát</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny fusili </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené holandské řízky, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s uzeným masem, kyselá okurka, škvarky s cibulí </td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pizza s rajčaty, šunkou, žampiony a sýrem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: Do růžova pečená vepřová panenka, celerová remunáda, cibulové crumble, grilované rajče</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety s jemnou pepřovou omáčkou, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky se sýrovou omáčkou, nakládané hrušky, filírovaný kuřecí steak, rukola</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Burger z bramboráku plněný vepřovým masem, cibulí, rajčetem, feferonkou a sýrem, smažené hranolky, tatarka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů s hermelínem v těstíčku a anglickou slaninou, promíchaný brusinkovým žervé </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Smažené řízky z vepřové panenky, bramborová kaše s máslem, citron</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené červené zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské vepřové rizoto se zeleninou a žampiony strouhaný sýr, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem na šunce, pečené brambory s kmínem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Pečená vepřová panenka do růžova, celerové pyré se sýrem a máslem, grilovaná paprika s olivovým olejem a parmazánem, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná vepřovou panenkou, ledovým salátem, zeleninou, sýrem a česnekovým dresinkem, smažené bramborové hranolky, tatarka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný citrónovým dresinkem, kuřecí stripsy, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Novinka ročníkového zázraku z Úvalského minipivovaru Libertas: BOHEMIAN FRESH HOP LAGER 12% Alk. 4,7% - Ibu 45 (na čepu pouze v našich Šenkýrnách a Libertasu)</td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen EXTRA CHMELENÁ 12%, Alk. 5,2%, IBU 32 - dej si dvě čepované, a dostaneš domů 0,5l plechovku</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanovo jableční řez s čokoládou a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Mangovo-smetanová panacotta </td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -117,7 +80,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou a játrovými knedlíčky 1a,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Čevabčiči z vepřového ramínka s mačkanými brambory s pažitkou, hořčicí a cibulkou 1a,3,7,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Hot Dog s trhaným kuřetem, křupavou cibulkou a čedarem s americkými brambory a barbecue majonézou 1a,3,7,10,11</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Strapačky s kysaným zelím a uzenou krkovičkou 1a,3,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Brokolicový krém s máslovými krutony 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Dušená vepřová játra na cibulce s jasmínovou rýží 1a</td><td class="pricem">125 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažená jehla s kuřecím masem, šunkou a žampiony s vařenými brambory a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Caesar salát s ančovičkovým dresinkem, kuřecím masem, anglickou slaninou, krutony a parmazánem 1a,3,4,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
