--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 27.12.2021 09:13:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 27.12.2021 09:43:27</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,28 +7,21 @@
 <h5>Pondělí, 27. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>❣️❣️❣️V období 20.-24.12. má Aduš s Honzou dovolenou❣️❣️❣️ Budeme se na Vás opět těšit 27.12. ❣️❣️❣️Všem krásné svátky plné pohody❣️❣️❣️</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Vývar se zeleninou a vepřovým masem</strong>
+<strong>Kapustová se zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová líčka na vině s rýží a kořenovou zeleninou</strong>
+<strong>Naše sekaná s vajíčkem, vařeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou NEBO řepou</strong>
+<strong>Vepřová plec s krémovou cibulovo - tymiánovou omáčkou a rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
