--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 28.12.2021 09:13:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 28.12.2021 09:43:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,38 @@
 <h5>Úterý, 28. 12. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová se zeleninou</strong>
+<strong>❣️Dne 28.12. Otevřeno do 13:00 ❣️</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>❣️Od 29.12 do 31.12. máme ZAVŘENO❣️Těšíme se na Vás 3.1.2022.❣️KRÁSNÝ NOVÝ ROK VŠEM ❣️</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Zeleninová krémová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Naše sekaná s vajíčkem, vařeným bramborem a hořčicí</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							127,-
-						</span>
-</p>
-<p>
-<strong>Vepřová plec s krémovou cibulovo - tymiánovou omáčkou a rýží</strong>
+<strong>Hovězí na víně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s grilovaným kozím sýrem a bagetkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							127,-
 						</span>
 </p>
 <p>
