--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 29.12.2021 13:57:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 30.12.2021 06:11:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 29. 12. 2021</h5>
+<h5>Čtvrtek, 30. 12. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>❣️Dne 28.12. Otevřeno do 13:00 ❣️</strong>
@@ -64,7 +64,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 29.12.2021</div>
+<div class="nadpis">Čtvrtek 30.12.2021</div>
 <ul>
 <li class="poznamka">
 <div class="polozka">Těšíme se na Vas v novém roce a přejeme krásné svátky! </div>
